[gd_scene load_steps=62 format=2]

[ext_resource path="res://src/game/entities/enemies/states/AlertState.gd" type="Script" id=1]
[ext_resource path="res://src/game/entities/enemies/DetectionArea.gd" type="Script" id=2]
[ext_resource path="res://src/game/entities/enemies/states/DieState.gd" type="Script" id=3]
[ext_resource path="res://src/game/entities/enemies/states/IdleState.gd" type="Script" id=4]
[ext_resource path="res://src/game/entities/enemies/states/WalkState.gd" type="Script" id=5]
[ext_resource path="res://src/game/entities/enemies/soldier/SoldierStateMachine.gd" type="Script" id=6]
[ext_resource path="res://src/game/entities/enemies/soldier/Soldier.gd" type="Script" id=7]
[ext_resource path="res://assets/textures/enemies/battlepod/battlepod.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/enemies/golem/Golem_AttackB_FX.png" type="Texture" id=9]
[ext_resource path="res://assets/textures/green_circle.png" type="Texture" id=10]
[ext_resource path="res://src/game/entities/Projectile.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/textures/enemies/battlepod/battlepod2.png" type="Texture" id=12]
[ext_resource path="res://assets/sounds/pewpew_4.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/sounds/bomb-explossion.mp3" type="AudioStream" id=14]

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Body:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Fx:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "fire_loop"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2, -4 ), Vector2( -1, -5 ), Vector2( -3, -4 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fire_start"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2, -4 ), Vector2( -1, -5 ), Vector2( -3, -4 ), Vector2( -2, -4 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "hit"
length = 0.5
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_remove"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fx:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Fx:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="StreamTexture" id=9]
flags = 4
load_path = "res://.import/beams.png-d7314f9a6e24e29f31592b163c5bbaa7.stex"

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = SubResource( 9 )
region = Rect2( 117.735, 60.5337, 17.2737, 30.0413 )

[sub_resource type="PackedScene" id=33]
_bundled = {
"base_scene": 0,
"conn_count": 0,
"conns": PoolIntArray(  ),
"editable_instances": [  ],
"names": PoolStringArray( "SoldierProjectile", "VELOCITY", "LifetimeTimer", "wait_time", "ProjectileAnimations", "anims/RESET", "anims/fire_loop", "anims/fire_start", "anims/hit", "Hitbox", "collision_mask", "CollisionShape2D", "CollisionShape2D", "scale", "shape", "Body", "Node2D", "Sprite", "Sprite", "rotation", "scale", "texture", "Fx", "Sprite", "visible", "self_modulate", "position", "scale", "texture", "hframes", "vframes" ),
"node_count": 8,
"node_paths": [ NodePath("."), NodePath("."), NodePath("."), NodePath("./Hitbox"), NodePath("."), NodePath("./Body"), NodePath(".") ],
"nodes": PoolIntArray( -1, -1, 2147483647, 0, -1, 1, 1, 1, 0, 1073741824, -1, 2147483647, 262146, -1, 1, 3, 2, 0, 1073741825, -1, 2147483647, 524292, -1, 4, 5, 3, 6, 4, 7, 5, 8, 6, 0, 1073741826, -1, 2147483647, 786441, -1, 1, 10, 7, 0, 1073741827, 0, 12, 262155, -1, 2, 13, 8, 14, 9, 0, 1073741828, 0, 16, 1048591, -1, 0, 0, 1073741829, 0, 18, 262161, -1, 3, 19, 10, 20, 11, 21, 12, 0, 1073741830, 0, 23, 1310742, -1, 7, 24, 13, 25, 14, 26, 15, 27, 16, 28, 17, 29, 18, 30, 19, 0 ),
"variants": [ ExtResource( 11 ), 150.0, 3.0, SubResource( 8 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), 3, Vector2( 0.5, 0.5 ), SubResource( 1 ), 1.5708, Vector2( 0.4, 0.4 ), SubResource( 10 ), false, Color( 1, 0.968627, 0.619608, 1 ), Vector2( -2, -5 ), Vector2( 0.75, 0.75 ), ExtResource( 9 ), 3, 2 ],
"version": 2
}

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 64, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 128, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 192, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 64, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 128, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 192, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 320, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 384, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 256, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 384, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 256, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 320, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 128, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 192, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 256, 256, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 8 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 8 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 64, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 128, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 192, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 8 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 8 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 8 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 8 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 8 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 8 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": false,
"name": "alert",
"speed": 10.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 61 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": false,
"name": "die",
"speed": 20.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "go_normal",
"speed": 10.0
}, {
"frames": [ SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 68 ), SubResource( 67 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "idle_alert",
"speed": 5.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "walk_alert",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=37]
extents = Vector2( 9.5, 12.5 )

[sub_resource type="CircleShape2D" id=38]
radius = 192.0

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.690196, 0.164706, 0.811765, 1 )

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0, 0, 0, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="CapsuleShape2D" id=70]
radius = 12.0
height = 12.6102

[node name="Soldier" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 7 )
max_speed = 60.0
max_life = 10.0
projectile_scene = SubResource( 33 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 6 )
character_path = NodePath("..")
START_STATE = NodePath("Idle")
STATES_LIST = [ NodePath("Idle"), NodePath("Walk"), NodePath("Alert"), NodePath("Die") ]

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )
state_id = "idle"

[node name="IdleTimer" type="Timer" parent="StateMachine/Idle"]
one_shot = true

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 5 )
state_id = "walk"
wander_radius = Vector2( 50, 50 )
speed = 5.0
max_speed = 100.0

[node name="Alert" type="Node" parent="StateMachine"]
script = ExtResource( 1 )
state_id = "alert"

[node name="FireTimer" type="Timer" parent="StateMachine/Alert"]

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 3 )
state_id = "die"

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( 0, -19.0339 )

[node name="Body" type="AnimatedSprite" parent="."]
position = Vector2( 0, -12 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 7 )
animation = "die"
frame = 13
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -12.5 )
shape = SubResource( 37 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0.0428963, -18.0659 )
cast_to = Vector2( 0, 0 )
collision_mask = 3

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2( 0, -12 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="green_circle" type="Sprite" parent="DetectionArea"]
visible = false
modulate = Color( 1, 1, 1, 0.301961 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
visible = false
shape = SubResource( 38 )

[node name="Pivot" type="Node2D" parent="."]

[node name="HUD" type="Node2D" parent="Pivot"]
position = Vector2( 0, -5.36442e-07 )
scale = Vector2( 0.5, 1 )

[node name="Control" type="Control" parent="Pivot/HUD"]
margin_left = -16.0
margin_top = -40.0
margin_right = 16.0
margin_bottom = -35.0

[node name="LifeProgressBar" type="ProgressBar" parent="Pivot/HUD/Control"]
margin_top = 11.0
margin_right = 32.0
margin_bottom = 12.0
custom_styles/fg = SubResource( 31 )
custom_styles/bg = SubResource( 32 )
max_value = 10.0
step = 1.0
value = 5.0
rounded = true
percent_visible = false

[node name="Fire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
max_distance = 600.0
bus = "Items"

[node name="Explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
max_distance = 600.0
bus = "Items"

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2( 0, -12 )
shape = SubResource( 70 )

[connection signal="hit" from="." to="StateMachine" method="_on_damage_received"]
[connection signal="timeout" from="StateMachine/Idle/IdleTimer" to="StateMachine/Idle" method="_on_IdleTimer_timeout"]
[connection signal="animation_finished" from="Body" to="StateMachine" method="_on_Body_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="StateMachine" method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="StateMachine" method="_on_DetectionArea_body_exited"]
[connection signal="body_entered" from="CollisionArea" to="." method="_on_collision_area_body_enter"]
